--- a/dashboard/templates/releases/release_list.html
+++ b/dashboard/templates/releases/release_list.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 {% load custom_tags %}
 {% block extrascript %}
-<script src="/static/js/waiting.dialog.js"></script>
 <script src="/static/js/csrf.js"></script>
 <script src="/static/node_modules/bootstrap-select/dist/js/bootstrap-select.js"></script>
 <script src="/static/node_modules/jquery-match-height/dist/jquery.matchHeight.js"></script>
@@ -166,7 +165,7 @@
   function refresh_releases_summary() {
     $.ajax({
       beforeSend: function(e, a) {
-        csrfSafeMethod(a.type) || this.crossDomain || (csrftoken ? e.setRequestHeader("X-CSRFToken", csrftoken) : e.setRequestHeader("X-CSRFToken", "{{ csrf_token }}")), waitingDialog.show()
+        csrfSafeMethod(a.type) || this.crossDomain || (csrftoken ? e.setRequestHeader("X-CSRFToken", csrftoken) : e.setRequestHeader("X-CSRFToken", "{{ csrf_token }}")), waitSpinner.show()
       },
       type: "POST",
       url: "{% url 'ajax-releases-report' %}",
@@ -174,10 +173,11 @@
         subject: "releases"
       },
       success: function(e) {
-        waitingDialog.hide(), $("#div-releases-summary").html(e)
+        waitSpinner.hide(), $("#div-releases-summary").html(e)
       },
       error: function(e, a, s) {
-        waitingDialog.hide(), $("#div-releases-summary").html("<div class='alert alert-warning' role='alert'>Some unexpected error occurred.</div>")
+        waitSpinner.hide()
+        $("body").append('<div class="toast-pf toast-pf-max-width toast-pf-top-right alert alert-danger alert-dismissable"><button type="button" class="close" data-dismiss="alert" aria-hidden="true"><span class="pficon pficon-close"></span></button><span class="pficon pficon-error-circle-o"></span>Some unexpected error occurred!</div>')
       }
     })
   }
