--- a/dashboard/templates/stats/custom_graph.html
+++ b/dashboard/templates/stats/custom_graph.html
@@ -17,7 +17,7 @@ function getUrlVars(){for(var a,e=[],t=window.location.href.slice(window.locatio
 
 {% block navigation %}
     <a href="{% url 'home' %}" class="btn btn-default"><i class="glyphicon glyphicon-dashboard"></i></a>
-    <a href="{% url 'custom-graph' %}" class="btn btn-default">Translation Coverage</a>
+    <a href="{% url 'custom-graph' %}" class="btn btn-default">Coverage</a>
 {% endblock %}
 
 {% block tabcontent %}
