--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="Translation Stats">
+    <meta name="description" content="Track Translation Completeness">
     <meta name="author" content="suanand@redhat.com">
     <link rel="icon" href="/static/img/favicon.ico">
 
@@ -52,7 +52,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="{% url 'home' %}" style="font-size: x-large;">Transtats
+              <a class="navbar-brand" href="{% url 'home' %}" style="font-size: x-large;">{{ app_name }}
                 <sup><span class="label label-info" style="font-size: x-small;">Alpha</span></sup></a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
