--- a/transtats/static/css/transtats.css
+++ b/transtats/static/css/transtats.css
@@ -37,3 +37,9 @@ body {
 .nounderline {
     text-decoration: none
 }
+
+.scrollable-menu {
+    height: auto;
+    max-height: 300px;
+    overflow-x: hidden;
+}
