--- a/dashboard/templates/stats/_releases_summary.html
+++ b/dashboard/templates/stats/_releases_summary.html
@@ -14,16 +14,18 @@
                 In total we have <span class="text-info">{% if summary.total_untranslated_msgs %}
                 {{ summary.total_untranslated_msgs }}{% else %}0{% endif %}</span> untranslated messages across
                 <span class="text-info">{{ summary.languages|length }}</span> languages!
-                <table class="table table-bordered table-striped">
-                    <tbody>
-                    {% for lang, untranslated in summary.languages.items %}
-                    <tr>
-                        <td><a href="{% url 'trans-status-release' summary.slug %}?locale={{ lang_locale|get_item:lang }}">
-                            {{ lang }}</a></td><td align="right" class="text-info">{{ untranslated }}</td>
-                    </tr>
-                    {% endfor %}
-                    </tbody>
-                </table>
+                <div class="scrollable-menu">
+                    <table class="table table-bordered table-striped">
+                        <tbody>
+                        {% for lang, untranslated in summary.languages.items %}
+                        <tr>
+                            <td><a href="{% url 'trans-status-release' summary.slug %}?locale={{ lang_locale|get_item:lang }}">
+                                {{ lang }}</a></td><td align="right" class="text-info">{{ untranslated }}</td>
+                        </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
             </p>
           </div>
         </div>
