--- a/dashboard/templates/stats/custom_graph.html
+++ b/dashboard/templates/stats/custom_graph.html
@@ -21,10 +21,10 @@
 {% endblock %}
 
 {% block tabcontent %}
-    <br/><hr/><span style="padding-left:20px;padding-right:10px;"
+    <br/><span style="padding-left:20px;padding-right:10px;"
                     class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
         <span id="coverageinfo" class="text-info">
-            Translation coverage of a package list for a specific release in selected languages.</span><hr/>
+            Translation coverage of a package list for a specific release in selected languages. Based on graph rules.</span><hr/>
     <div style="padding:20px">
         <div class="row" style="padding-bottom:20px">
             <div class="col-xs-12">
