--- a/dashboard/templates/stats/_workload_combined.html
+++ b/dashboard/templates/stats/_workload_combined.html
@@ -11,7 +11,7 @@
       {% for package in packages %}
       <tr>
         <td width="2%">{{ forloop.counter }}</td>
-        <td width="18%">{{ package.0 }}</td>
+        <td width="18%"><a href="{% url 'trans-status-package' package.0 %}">{{ package.0 }}</a></td>
         <td width="20%">{{ package.1.Total }}&nbsp;<span class="text-muted">messages</span></td>
         <td width="20%">{{ package.1.Translated }}</td>
         <td width="20%">{{ package.1.Untranslated }}</td>
